--- a/example.env
+++ b/example.env
@@ -1,6 +1,6 @@
 CLIENT_ID=
 CLIENT_SECRET=
-OAUTH_BASE_URL=
-AUTHORIZATION_URL=
-TOKEN_URL=
-CALLBACK_URL=
+OAUTH_BASE_URL=http://backoffice.test:3030
+AUTHORIZATION_URL=/oauth/authorize
+TOKEN_URL=/oauth/token
+CALLBACK_URL=http://[DOMAIN]:[PORT]/auth/oauth/callback
